Fix krzywego layoutu.

--- a/app/views/group/changeGroupPassword.scala.html
+++ b/app/views/group/changeGroupPassword.scala.html
@@ -3,22 +3,24 @@
 @implicitFieldConstructor = @{ b3.horizontal.fieldConstructor("col-md-3", "col-md-9") }
 
 @main(group.name, user, Some("group"), Some(Messages("group.change.header", group.name))) {
-  <div class="col-lg-6 col-lg-offset-3">
-      <div class="box box-primary">
-          <div class="box-header with-border">
-              <h3 class="box-title">@group.name</h3>
-          </div>
-          <div class="box-body">
-              @tags.alertFromForm(groupForm)
-              @tags.alertFromRequest(request, "error")
-              @b3.form(routes.GroupController.handleChangePassword(group.id)) {
-                  @helper.CSRF.formField
-                  @b3.text(groupForm("oldPassword"), '_label -> Messages("group.change.old"), 'placeholder -> Messages("group.change.old"), 'value -> group.password, 'readonly -> true)
-                  @b3.password(groupForm("groupPassword1"), '_label -> Messages("auth.password"), 'placeholder -> Messages("auth.password"))
-                  @b3.password(groupForm("groupPassword2"), '_label -> Messages("auth.repassword"), 'placeholder -> Messages("auth.repassword"))
-                  @b3.submit('class -> "btn btn-primary"){ @Messages("group.change.button") }
-              }
-          </div>
-      </div>
-  </div>
+    <div class="row">
+        <div class="col-lg-6 col-lg-offset-3">
+            <div class="box box-primary">
+                <div class="box-header with-border">
+                    <h3 class="box-title">@group.name</h3>
+                </div>
+                <div class="box-body">
+                    @tags.alertFromForm(groupForm)
+                    @tags.alertFromRequest(request, "error")
+                    @b3.form(routes.GroupController.handleChangePassword(group.id)) {
+                        @helper.CSRF.formField
+                        @b3.text(groupForm("oldPassword"), '_label -> Messages("group.change.old"), 'placeholder -> Messages("group.change.old"), 'value -> group.password, 'readonly -> true)
+                        @b3.password(groupForm("groupPassword1"), '_label -> Messages("auth.password"), 'placeholder -> Messages("auth.password"))
+                        @b3.password(groupForm("groupPassword2"), '_label -> Messages("auth.repassword"), 'placeholder -> Messages("auth.repassword"))
+                        @b3.submit('class -> "btn btn-primary"){ @Messages("group.change.button") }
+                    }
+                </div>
+            </div>
+        </div>
+    </div>
 }
