--- a/app/views/group/deleteGroup.scala.html
+++ b/app/views/group/deleteGroup.scala.html
@@ -3,18 +3,20 @@
 @implicitFieldConstructor = @{ b3.horizontal.fieldConstructor("col-md-3", "col-md-9") }
 
 @main(Messages("group.delete.title"), user, Some("group"), Some(Messages("group.delete.title"))) {
-    <div class="col-lg-6 col-lg-offset-3">
-        <div class="box box-primary">
-            <div class="box-header with-border">
-                <h3 class="box-title">@group.name</h3>
-            </div>
-            <div class="box-body">
-                @tags.alertFromForm(groupForm)
-                @b3.form(routes.GroupController.handleDeleteGroup(group.id)) {
-                    @helper.CSRF.formField
-                    @b3.password(groupForm("groupPassword"), '_label -> Messages("auth.password"), 'placeholder -> Messages("auth.password"))
-                    @b3.submit('class -> "btn btn-primary"){ @Messages("group.delete.delete") }
-                }
+    <div class="row">
+        <div class="col-lg-6 col-lg-offset-3">
+            <div class="box box-primary">
+                <div class="box-header with-border">
+                    <h3 class="box-title">@group.name</h3>
+                </div>
+                <div class="box-body">
+                    @tags.alertFromForm(groupForm)
+                    @b3.form(routes.GroupController.handleDeleteGroup(group.id)) {
+                        @helper.CSRF.formField
+                        @b3.password(groupForm("groupPassword"), '_label -> Messages("auth.password"), 'placeholder -> Messages("auth.password"))
+                        @b3.submit('class -> "btn btn-primary"){ @Messages("group.delete.delete") }
+                    }
+                </div>
             </div>
         </div>
     </div>
