--- a/app/views/place/editPlace.scala.html
+++ b/app/views/place/editPlace.scala.html
@@ -3,7 +3,8 @@
 @implicitFieldConstructor = @{ b3.horizontal.fieldConstructor("col-md-3", "col-md-9") }
 
 @main(Messages("place.edit.title"), user, Some("place"), Some(Messages("place.edit.title"))) {
-    <div class="col-lg-6 col-lg-offset-3"><div class="box box-primary">
+    <div class="row">
+        <div class="col-lg-6 col-lg-offset-3"><div class="box box-primary">
             <div class="box-header with-border">
                 <h3 class="box-title">@place.name</h3>
             </div>
@@ -21,6 +22,7 @@
                     @b3.submit('class -> "btn btn-default"){ @Messages("place.edit.save") }
                 }
             </div>
+        </div>
         </div>
     </div>
 }
