--- a/app/views/vote/votingDetails.scala.html
+++ b/app/views/vote/votingDetails.scala.html
@@ -6,79 +6,81 @@
 @implicitFieldConstructor = @{ b3.vertical.fieldConstructor }
 
 @main(Messages("vote.details.title"), user, Some("vote"), Some(Messages("vote.details.title"))) {
-    <div class="col-lg-4">
-        <div class="box box-primary">
-            <div class="box-body">
-                <h3 class="profile-username text-center">@Messages("vote.details.details")</h3>
-                <ul class="list-group list-group-unbordered">
-                    @voting.votingEnd.map { date =>
-                        <li class="list-group-item">
-                            <b>@Messages("vote.create.vote.end")</b><a class="pull-right">@date.format("dd-MM-yyyy HH:mm")</a>
-                        </li>
-                    }
-                    @voting.orderEnd.map { date =>
-                        <li class="list-group-item">
-                            <b>@Messages("vote.create.order.end")</b><a class="pull-right">@date.format("dd-MM-yyyy HH:mm")</a>
-                        </li>
-                    }
-                    <li class="list-group-item">
-                        <b>@Messages("vote.details.status")</b>
-                        @if(voting.status == VotingDao.votingStarted) {
-                            <span class="badge bg-green pull-right">@Messages("vote.details.status.open")</span>
-                        } else {
-                            <span class="badge bg-blue-active pull-right">@Messages("vote.details.status.finished")</span>
+    <div class="row">
+        <div class="col-lg-4">
+            <div class="box box-primary">
+                <div class="box-body">
+                    <h3 class="profile-username text-center">@Messages("vote.details.details")</h3>
+                    <ul class="list-group list-group-unbordered">
+                        @voting.votingEnd.map { date =>
+                            <li class="list-group-item">
+                                <b>@Messages("vote.create.vote.end")</b><a class="pull-right">@date.format("dd-MM-yyyy HH:mm")</a>
+                            </li>
                         }
-                    </li>
-                    <li class="list-group-item">
-                        <b>@Messages("vote.details.author")</b><a href="@routes.UserController.userDetails(author.id)" class="pull-right">@author.fullName</a>
-                    </li>
-                    <li class="list-group-item">
-                        <b>@Messages("vote.details.creation.date")</b><a class="pull-right">@voting.creationDate.format("dd-MM-yyyy HH:mm")</a>
-                    </li>
-                </ul>
+                        @voting.orderEnd.map { date =>
+                            <li class="list-group-item">
+                                <b>@Messages("vote.create.order.end")</b><a class="pull-right">@date.format("dd-MM-yyyy HH:mm")</a>
+                            </li>
+                        }
+                        <li class="list-group-item">
+                            <b>@Messages("vote.details.status")</b>
+                            @if(voting.status == VotingDao.votingStarted) {
+                                <span class="badge bg-green pull-right">@Messages("vote.details.status.open")</span>
+                            } else {
+                                <span class="badge bg-blue-active pull-right">@Messages("vote.details.status.finished")</span>
+                            }
+                        </li>
+                        <li class="list-group-item">
+                            <b>@Messages("vote.details.author")</b><a href="@routes.UserController.userDetails(author.id)" class="pull-right">@author.fullName</a>
+                        </li>
+                        <li class="list-group-item">
+                            <b>@Messages("vote.details.creation.date")</b><a class="pull-right">@voting.creationDate.format("dd-MM-yyyy HH:mm")</a>
+                        </li>
+                    </ul>
 
-                @if(voting.authorId == user.userId) {
-                    <div class="btn-group btn-group-justified">
-                        @if(voting.status == VotingDao.votingStarted) {
-                            <a type="button" class="btn btn-info" role="button" data-toggle="modal" data-target="#finishModal">@Messages("vote.details.finish")</a>
-                            <a href="@routes.VotingController.editVoting(voting.id)" role="button" class="btn btn-info">@Messages("vote.details.edit")</a>
-                        }
-                        <a role="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal">@Messages("vote.details.delete")</a>
+                    @if(voting.authorId == user.userId) {
+                        <div class="btn-group btn-group-justified">
+                            @if(voting.status == VotingDao.votingStarted) {
+                                <a type="button" class="btn btn-info" role="button" data-toggle="modal" data-target="#finishModal">@Messages("vote.details.finish")</a>
+                                <a href="@routes.VotingController.editVoting(voting.id)" role="button" class="btn btn-info">@Messages("vote.details.edit")</a>
+                            }
+                            <a role="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal">@Messages("vote.details.delete")</a>
+                        </div>
+                    }
+                </div>
+            </div>
+
+            @if(voting.status == VotingDao.votingStarted) {
+                <div class="box box-primary">
+                    <div class="box-header with-border">
+                        <h3 class="box-title">@Messages("vote.details.your.vote")</h3>
                     </div>
-                }
-            </div>
-        </div>
-
-        @if(voting.status == VotingDao.votingStarted) {
-        <div class="box box-primary">
-            <div class="box-header with-border">
-                <h3 class="box-title">@Messages("vote.details.your.vote")</h3>
-            </div>
-            <div class="box-body">
-            @b3.form(routes.VotingController.handleVote(voting.id)) {
-                @helper.CSRF.formField
-                @b3.select(form("placesIds"), options = places.map(p => (p.id.toString, p.name)),
-                    '_label -> Messages("vote.create.places"), 'placehodler -> Messages("vote.create.places"), 'multiple -> true,
-                    'value -> votes.filter(x => x._2.exists(u => u.id == user.userId)).map(x => x._1.id).mkString(","))
-                @b3.submit('class -> "btn btn-default") {
-                    @Messages("vote.details.vote")
-                }
+                    <div class="box-body">
+                    @b3.form(routes.VotingController.handleVote(voting.id)) {
+                        @helper.CSRF.formField
+                        @b3.select(form("placesIds"), options = places.map(p => (p.id.toString, p.name)),
+                            '_label -> Messages("vote.create.places"), 'placehodler -> Messages("vote.create.places"), 'multiple -> true,
+                            'value -> votes.filter(x => x._2.exists(u => u.id == user.userId)).map(x => x._1.id).mkString(","))
+                        @b3.submit('class -> "btn btn-default") {
+                            @Messages("vote.details.vote")
+                        }
+                    }
+                    </div>
+                </div>
             }
-            </div>
         </div>
-        }
-    </div>
-    <div class="col-lg-8">
-        <div class="box box-primary">
-            <div class="box-header with-border">
-                <h3 class="box-title">@Messages("vote.details.votes")</h3>
-            </div>
-            <div class="box-body no-padding">
-                <canvas id="ctx" height="1" width="2"></canvas>
-                <script>
-                    var votingData = @Html(Json.toJson(votes.toList.map(x => x._2.map(x => x.fullName.getOrElse("")))).toString);
-                    var restaurantNames = @Html(Json.toJson(votes.toList.map(x => x._1.name)).toString);
-                </script>
+        <div class="col-lg-8">
+            <div class="box box-primary">
+                <div class="box-header with-border">
+                    <h3 class="box-title">@Messages("vote.details.votes")</h3>
+                </div>
+                <div class="box-body no-padding">
+                    <canvas id="ctx" height="1" width="2"></canvas>
+                    <script>
+                            var votingData = @Html(Json.toJson(votes.toList.map(x => x._2.map(x => x.fullName.getOrElse("")))).toString);
+                            var restaurantNames = @Html(Json.toJson(votes.toList.map(x => x._1.name)).toString);
+                    </script>
+                </div>
             </div>
         </div>
     </div>
