--- a/app/views/vote/votingNotFound.scala.html
+++ b/app/views/vote/votingNotFound.scala.html
@@ -1,10 +1,12 @@
 @(user: silhouette.SilhouetteUser)(implicit messages: Messages)
 
 @main(Messages("place.not.found"), user, Some("vote")) {
-  <div class="col-lg-6 col-lg-offset-3">
     <div class="row">
-      <hr class="col-md-12" />
-      <h2 class="col-md-8">@Messages("vote.not.found")</h2>
+        <div class="col-lg-6 col-lg-offset-3">
+            <div class="row">
+                <hr class="col-md-12" />
+                <h2 class="col-md-8">@Messages("vote.not.found")</h2>
+            </div>
+        </div>
     </div>
-  </div>
 }
