--- a/app/views/vote/editVoting.scala.html
+++ b/app/views/vote/editVoting.scala.html
@@ -19,8 +19,10 @@
                         @b3.select(form("placesIds"), options = allPlaces.map(p => (p.id.toString, p.name)),
                             '_label -> Messages("vote.create.places"), 'placehodler -> Messages("vote.create.places"),
                             'multiple -> true, 'value -> chosenPlaces.map(p => p.id).mkString(","))
-                        @b3.inputType( "text", form("votingEnd"), 'class -> "form-control form_datetime", '_label -> Messages("vote.create.vote.end"))
-                        @b3.inputType( "text", form("orderEnd"), 'class -> "form-control form_datetime", '_label -> Messages("vote.create.order.end"))
+                        @b3.inputType( "text", form("votingEnd"), 'class -> "form-control form_datetime", '_label -> Messages("vote.create.vote.end"),
+                            'value -> voting.votingEnd.map(x => x.format("yyyy-MM-dd HH:mm:ss")).getOrElse(""))
+                        @b3.inputType( "text", form("orderEnd"), 'class -> "form-control form_datetime", '_label -> Messages("vote.create.order.end"),
+                            'value -> voting.orderEnd.map(x => x.format("yyyy-MM-dd HH:mm:ss")).getOrElse(""))
                         @b3.submit('class -> "btn btn-default"){ @Messages("vote.edit.edit") }
                     }
                 </div>
