--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -16,12 +16,12 @@
                 <ul class="nav navbar-nav">
                     <li class="dropdown user user-menu">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <img src="@user.avatarURL.getOrElse(routes.Assets.versioned("images/silhouette.png"))" class="user-image" alt="User Image">
+                            @tags.userImage(user, "user-image")
                             <span class="hidden-xs">@user.fullName</span>
                         </a>
                         <ul class="dropdown-menu">
                             <li class="user-header">
-                                <img src="@user.avatarURL.getOrElse(routes.Assets.versioned("images/silhouette.png"))" class="img-circle" alt="User Image">
+                                @tags.userImage(user, "img-circle")
                                 <p>
                                     @user.fullName
                                     <small>@user.email</small>
@@ -45,7 +45,7 @@
         <section class="sidebar">
             <div class="user-panel">
                 <div class="pull-left image">
-                    <img src="@user.avatarURL.getOrElse(routes.Assets.versioned("images/silhouette.png"))" class="img-circle" alt="User Image">
+                    @tags.userImage(user, "img-circle")
                 </div>
                 <div class="pull-left info">
                     <p>@user.fullName</p>
