--- a/app/views/user/userDetails.scala.html
+++ b/app/views/user/userDetails.scala.html
@@ -8,7 +8,7 @@
         <div class="col-lg-4 col-lg-offset-4">
             <div class="box box-primary">
                 <div class="box-body box-profile">
-                    <img class="profile-user-img img-responsive img-circle" src="@userDetails.avatarUrl.getOrElse(routes.Assets.versioned("images/silhouette.png"))" alt="User profile picture">
+                    @tags.userImage(userDetails, "profile-user-img img-responsive img-circle")
                     <h3 class="profile-username text-center">@userDetails.fullName</h3>
                     <p class="text-muted text-center">@userDetails.email</p>
                     <ul class="list-group list-group-unbordered">
